# investalchemy

./: .gitignore  Makefile  README.md  pyproject.toml
formulas/: equity_evaluator.py  fi_evaluator.py  portfolio_risk_return.py  risk_return.py
investalchemy/: .equity_evaluator.py.swp  equity_evaluator.py  fi_evaluator.py  portfolio_risk_return.py  risk_return.py
tests/: test_portfolio_risk_return.py  test_risk_return.py
